Language support added

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -57,6 +57,8 @@
     "visibleInSearch": "Visible In Search",
     "displayImage": "Display Image",
     "enterName": "Enter Name",
+    "sort": "Sort",
+    "filter": "Filter",
     "cancel": "Cancel",
     "noOrgErrorTitle": "Organizations Not Found",
     "noOrgErrorDescription": "Please create an organization through dashboard"
@@ -88,6 +90,10 @@
     "superAdmin": "SUPERADMIN",
     "user": "USER",
     "enterName": "Enter Name",
+    "loadingUsers": "Loading Users...",
+    "noUserFound": "No User Found",
+    "sort": "Sort",
+    "filter": "Filter",
     "noOrgError": "Organizations not found, please create an organization through dashboard",
     "roleUpdated": "Role Updated.",
     "talawaApiUnavailable": "Talawa-API service is unavailable. Is it running? Check your network connectivity too."
@@ -101,6 +107,10 @@
     "accept": "Accept",
     "reject": "Reject",
     "enterName": "Enter Name",
+    "loadingRequests": "Loading Requests...",
+    "noRequestFound": "No Request Found",
+    "sort": "Sort",
+    "filter": "Filter",
     "noOrgError": "Organizations not found, please create an organization through dashboard",
     "userApproved": "User Approved",
     "userRejected": "User Rejected",
