--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -57,7 +57,11 @@
     "visibleInSearch": "खोज में दृश्यमान",
     "displayImage": "प्रदर्शन छवि",
     "enterName": "नाम दर्ज करें",
-    "cancel": "रद्द करना"
+    "sort": "छांटें",
+    "filter": "फ़िल्टर",
+    "cancel": "रद्द करना",
+    "noOrgErrorTitle": "संगठन नहीं मिला",
+    "noOrgErrorDescription": "कृपया डैशबोर्ड के माध्यम से एक संगठन बनाएं"
   },
   "superDashListCard": {
     "created": "बनाया था",
@@ -86,6 +90,10 @@
     "superAdmin": "सुपरएडमिन",
     "user": "उपयोगकर्ता",
     "enterName": "नाम दर्ज करें",
+    "loadingUsers": "उपयोगकर्ता लोड हो रहा है ...",
+    "noUserFound": "कोई उपयोगकर्ता नहीं मिला।",
+    "sort": "छांटें",
+    "filter": "फ़िल्टर",
     "roleUpdated": "भूमिका अपडेट की गई।",
     "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
@@ -98,6 +106,10 @@
     "accept": "स्वीकार करना",
     "reject": "अस्वीकार",
     "enterName": "नाम दर्ज करें",
+    "loadingRequests": "अनुरोध लोड हो रहा है ...",
+    "noRequestFound": "कोई अनुरोध नहीं मिला।",
+    "sort": "छांटें",
+    "filter": "फ़िल्टर",
     "userApproved": "उपयोगकर्ता स्वीकृत",
     "userRejected": "उपयोगकर्ता अस्वीकृत",
     "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
