--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -61,7 +61,8 @@
     "filter": "फ़िल्टर",
     "cancel": "रद्द करना",
     "noOrgErrorTitle": "संगठन नहीं मिला",
-    "noOrgErrorDescription": "कृपया डैशबोर्ड के माध्यम से एक संगठन बनाएं"
+    "noOrgErrorDescription": "कृपया डैशबोर्ड के माध्यम से एक संगठन बनाएं",
+    "noResultsFoundFor": "के लिए कोई परिणाम नहीं मिला "
   },
   "orgListCard": {
     "admins": "व्यवस्थापक",
