--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -61,7 +61,8 @@
     "filter": "過濾",
     "cancel": "取消",
     "noOrgErrorTitle": "找不到组织",
-    "noOrgErrorDescription": "请通过仪表板创建一个组织"
+    "noOrgErrorDescription": "请通过仪表板创建一个组织",
+    "noResultsFoundFor": "未找到结果 "
   },
   "orgListCard": {
     "admins": "管理員",
