--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -89,6 +89,7 @@
     "sort": "छांटें",
     "filter": "फ़िल्टर",
     "roleUpdated": "भूमिका अपडेट की गई।",
+    "noResultsFoundFor": "के लिए कोई परिणाम नहीं मिला ",
     "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "requests": {
@@ -106,6 +107,7 @@
     "filter": "फ़िल्टर",
     "userApproved": "उपयोगकर्ता स्वीकृत",
     "userRejected": "उपयोगकर्ता अस्वीकृत",
+    "noResultsFoundFor": "के लिए कोई परिणाम नहीं मिला ",
     "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
   },
   "adminNavbar": {
