--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -89,6 +89,7 @@
     "sort": "排序",
     "filter": "過濾",
     "roleUpdated": "角色已更新。",
+    "noResultsFoundFor": "未找到结果 ",
     "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
   },
   "requests": {
@@ -106,6 +107,7 @@
     "filter": "過濾",
     "userApproved": "用戶批准",
     "userRejected": "用戶被拒絕",
+    "noResultsFoundFor": "未找到结果 ",
     "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。"
   },
   "adminNavbar": {
