--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -42,6 +42,30 @@
     "users": "用户",
     "logout": "退出登录"
   },
+  "leftDrawerOrg": {
+    "talawaAdminPortal": "塔拉瓦管理门户",
+    "menu": "菜单",
+    "talawa_portal": "塔拉瓦管理門戶",
+    "Dashboard": "儀表板",
+    "People": "人們",
+    "Events": "事件",
+    "Contributions": "貢獻",
+    "Posts": "帖子",
+    "Block/Unblock": "阻止/解除阻止",
+    "Plugins": "插件",
+    "Plugin Store": "插件商店",
+    "allOrganizations": "所有组织",
+    "yourOrganization": "您的组织",
+    "notification": "通知",
+    "settings": "設置",
+    "language": "語",
+    "logout": "登出",
+    "notifications": "通知",
+    "spamsThe": "垃圾郵件",
+    "group": "團體",
+    "noNotifications": "沒有通知",
+    "close": "關"
+  },
   "orgList": {
     "title": "塔拉瓦組織",
     "you": "你",
@@ -133,7 +157,7 @@
     "close": "關"
   },
   "dashboard": {
-    "title": "塔拉瓦儀表板",
+    "title": "儀表板",
     "location": "地點",
     "about": "關於",
     "deleteThisOrganization": "刪除此組織",
@@ -422,6 +446,7 @@
     "pDesc": "此插件启用 UI"
   },
   "addOnStore": {
+    "title": "插件商店",
     "searchName": "例如：捐赠",
     "enable": "启用",
     "disable": "残疾人",
