[Talawa-user-portal] Add Settings and Donate Screen, along with other UI fixes (#953)
* Create login and register page for user portal

* Lint public locales

* Create tests for login page components

* Add react import in tests

* Create organizations screen for user portal

* Fix failing tests and lint code

* fix failing tests

* Add tests for organization screen and componenets

* Fix non-null assertions

* Fix non-null assertions in organizations test

* Fix bootstrap migration changes

* Add Home Screen along with other components

* Fix failing tests

* Add required tests and Offcanvas navbar

* Remove unused variables from tests

* Sync the Mutations with talawa-api

* Add Settings and Donate Screen

* Add multilingual support for the screens

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -537,5 +537,20 @@
     "feed": "Feed",
     "pinnedPosts": "View Pinned Posts",
     "somethingOnYourMind": "Something on your mind?"
+  },
+  "settings": {
+    "profileSettings": "Profile Settings",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "emailAddress": "Email Address",
+    "updateImage": "Update Image",
+    "save": "Save"
+  },
+  "donate": {
+    "donateTo": "Donate to",
+    "amount": "Amount",
+    "yourPreviousDonations": "Your Previous Donations",
+    "donate": "Donate",
+    "nothingToShow": "Nothing to show here."
   }
 }
