--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -145,7 +145,7 @@
     "posts": "Des postes",
     "events": "Événements",
     "blockedUsers": "Utilisateurs bloqués",
-    "membershipRequests": "Demandes d'adhésion",
+    "requests": "Demandes",
     "deleteOrganization": "Supprimer l'organisation",
     "deleteMsg": "Voulez-vous supprimer cette organisation ?",
     "no": "Non",
