--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -145,7 +145,7 @@
     "posts": "Publicaciones",
     "events": "Eventos",
     "blockedUsers": "Usuarios bloqueados",
-    "membershipRequests": "Solicitudes de membresía",
+    "requests": "Solicitudes",
     "deleteOrganization": "Eliminar Organización",
     "deleteMsg": "¿Desea eliminar esta organización?",
     "no": "No",
