--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -145,7 +145,7 @@
     "posts": "帖子",
     "events": "事件",
     "blockedUsers": "被阻止的用戶",
-    "membershipRequests": "會員申請",
+    "requests": "请求",
     "deleteOrganization": "刪除組織",
     "deleteMsg": "您要刪除此組織嗎？",
     "no": "不",
